Add work orders to repairs
Work orders do need identifying, so create new WorkOrder model with has_many to Repair.
Allow creation of work orders with creation of repair.
Update swagger documentation
